# review_app

./: .gitignore  auth.py  config.py  config.yaml  langfuse_reader.py  main.py  pyproject.toml  router.py  storage.py  translations.py
static/: style.css
templates/: base.html  dashboard.html  list.html  login.html  review.html
